Added extra coremod info
build.gradle now makes the camera twist coremod actually load in-game

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,14 @@ dependencies {
 
 }
 
+jar {
+    manifest {
+        attributes(
+                "FMLCorePlugin": "erc.rewriteClass.loadingPlugin",
+                "FMLCorePluginContainsFMLMod": "true")
+    }
+}
+
 processResources {
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
