--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url = "http://files.minecraftforge.net/maven" }
+        maven { url = "https://files.minecraftforge.net/maven" }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
@@ -11,9 +11,9 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.5.1"
-group = "mochisystems.mod.erc" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "ExRollerCoaster"
+version = "1.0"
+group = "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "modid"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -21,7 +21,7 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.5.2768"
+    version = "1.12.2-14.23.5.2847"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -32,12 +32,6 @@ minecraft {
     mappings = "snapshot_20171003"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
-
-//sourceSets.main {
-//    java.srcDirs project.projectDir.name
-//    resources.srcDirs project.projectDir.name
-//    output.resourcesDir output.classesDir
-//}
 
 dependencies {
     // you may put jars on which you depend on in ./libs
@@ -63,14 +57,6 @@ dependencies {
 
 }
 
-jar {
-    manifest {
-        attributes(
-                "FMLCorePlugin": "erc.rewriteClass.loadingPlugin",
-                "FMLCorePluginContainsFMLMod": "true")
-    }
-}
-
 processResources {
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
@@ -89,5 +75,3 @@ processResources {
         exclude 'mcmod.info'
     }
 }
-
-tasks.withType(Jar) {compileJava.options.encoding = 'UTF-8'}
