--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.0"
-group = "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version = "1.5.1"
+group = "mochisystems.mod.erc" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "ExRollerCoaster"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -75,3 +75,5 @@ processResources {
         exclude 'mcmod.info'
     }
 }
+
+tasks.withType(Jar) {compileJava.options.encoding = 'UTF-8'}
